--- a/carThing/index.html
+++ b/carThing/index.html
@@ -16,6 +16,10 @@
             <h1>Spotify</h1>
 
         </div>
+    
+    </header>
+
+    <main>
 
         <div class="CarThing">
 
@@ -34,94 +38,93 @@
             </ul>
         </nav>
 
-    </header>
+        <div class="Introduccion">
 
-    <div class="Introduccion">
+            <h3 id="QueEs">¿Qué es el Spotify Car Thing?</h3>
 
-        <h3 id="QueEs">¿Qué es el Spotify Car Thing?</h3>
+            <p class="p">Spotify car thing facilita la capacidad de escuchar su música favorita en su vehículo. Podrá conectar este dispositivo a un vehículo y así tener una mejor experiencia escuchando música en su vehículo.</p>
 
-        <p class="p">Spotify car thing facilita la capacidad de escuchar su música favorita en su vehículo. Podrá conectar este dispositivo a un vehículo y así tener una mejor experiencia escuchando música en su vehículo.</p>
+        </div>
 
-    </div>
+        <div class="ComoFunciona">
 
-    <div class="ComoFunciona">
+            <h3 id="ComoFunc">Como Funciona</h3>
 
-        <h3 id="ComoFunc">Como Funciona</h3>
+            <p class="p">A continuación le mostraremos lo fácil que es hacer funcionar el Spotify Thing en tres sencillos pasos.</p>
 
-        <p class="p">A continuación le mostraremos lo fácil que es hacer funcionar el Spotify Thing en tres sencillos pasos.</p>
+            <img id="conectar" src="./img/carThingPairing.svg" alt="conectar">
 
-        <img id="conectar" src="./img/carThingPairing.svg" alt="conectar">
+            <ol>
+                <li>Conecte Car Thing a corriente.</li>
+                <p>Use el cable y el adaptador de corriente al dispositivo y a una toma de corriente de 12V.</p>
+                <li>Conecte su teléfono a Car Thing.</li>
+                <p>Conecte su teléfono a Car Thing mediante los ajustes Bluetooth del primero.</p>
+                <li>Conecte su teléfono al stereo de su coche.</li>
+                <p>Conecte su telefono con su coche mediante los ajustes Bluetooth, AUX o cable USB.</p>
+            </ol>
 
-        <ol>
-            <li>Conecte Car Thing a corriente.</li>
-            <p>Use el cable y el adaptador de corriente al dispositivo y a una toma de corriente de 12V.</p>
-            <li>Conecte su teléfono a Car Thing.</li>
-            <p>Conecte su teléfono a Car Thing mediante los ajustes Bluetooth del primero.</p>
-            <li>Conecte su teléfono al stereo de su coche.</li>
-            <p>Conecte su telefono con su coche mediante los ajustes Bluetooth, AUX o cable USB.</p>
-        </ol>
+        </div>
 
-    </div>
+        <div class="Accesorios">
 
-    <div class="Accesorios">
+            <h3 id="Acceso">Accesorios</h3>
 
-        <h3 id="Acceso">Accesorios</h3>
+            <img id="accesorios" src="./img/carThingWhatsInTheBox.png" alt="accesorios">
 
-        <img id="accesorios" src="./img/carThingWhatsInTheBox.png" alt="accesorios">
+            <p class="p">El Spotify Car Thing incluye todos los accesorios necesarios para poder utilizarlo de la forma que más se adapte a su vehículo.</p>
 
-        <p class="p">El Spotify Car Thing incluye todos los accesorios necesarios para poder utilizarlo de la forma que más se adapte a su vehículo.</p>
+            <p id="Contiene">Contiene:</p>
 
-        <p id="Contiene">Contiene:</p>
+            <ul>
+                <li>Car Thing</li>
+                <li>Cable USB-C</li>
+                <li>Adaptador de corriente</li>
+                <li>Soporte magnético</li>
+                <li>Soporte de ventilación</li>
+                <li>Soporte de CD</li>
+                <li>Soporte de salpicadero</li>
+            </ul>
 
-        <ul>
-            <li>Car Thing</li>
-            <li>Cable USB-C</li>
-            <li>Adaptador de corriente</li>
-            <li>Soporte magnético</li>
-            <li>Soporte de ventilación</li>
-            <li>Soporte de CD</li>
-            <li>Soporte de salpicadero</li>
-        </ul>
+        </div>
 
-    </div>
+        <div class="FuncionesClave">
 
-    <div class="FuncionesClave">
+            <h3 id="Claves">Funciones Clave</h3>
 
-        <h3 id="Claves">Funciones Clave</h3>
+            <p class="p">Spotify Car Thing cuenta con todo tipo de funciones que facilitan su uso. Destacan las siguientes:</p>
 
-        <p class="p">Spotify Car Thing cuenta con todo tipo de funciones que facilitan su uso. Destacan las siguientes:</p>
+            <table>
+                <tr>
+                    <th class="th">Funciones</th>
+                    <th class="th">Descipción</th>
+                </tr>
+                <tr>
+                    <th>¡Gíralo!</th>
+                    <td>Usa la rueda para buscar, seleccionar, reproducir, pausar y descubrir</td>
+                </tr>
+                <tr>
+                    <th>¡Háblale!</th>
+                    <td>Digale “Hey Spotify” luego pídale una canción, album, artista, playlist, estación, o podcast</td>
+                </tr>
+                <tr>
+                    <th>¡Míralo!</th>
+                    <td>La pantalla muestra qué está sonando, lo próximo, e interactuar de manera táctil</td>
+                </tr>
+                <tr>
+                    <th>¡Púlsalo!</th>
+                    <td>Cuatro botones con presets le otorgan acceso rápido a sus artistas favoritos, playlists, estaciones, y podcasts</td>
+                </tr>
+            </table>
 
-        <table>
-            <tr>
-              <th class="th">Funciones</th>
-              <th class="th">Descipción</th>
-            </tr>
-            <tr>
-              <th>¡Gíralo!</th>
-              <td>Usa la rueda para buscar, seleccionar, reproducir, pausar y descubrir</td>
-            </tr>
-            <tr>
-              <th>¡Háblale!</th>
-              <td>Digale “Hey Spotify” luego pídale una canción, album, artista, playlist, estación, o podcast</td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>¡Míralo!</th>
-              <td>La pantalla muestra qué está sonando, lo próximo, e interactuar de manera táctil</td>
-            </tr>
-            <tr>
-              <th>¡Púlsalo!</th>
-              <td>Cuatro botones con presets le otorgan acceso rápido a sus artistas favoritos, playlists, estaciones, y podcasts</td>
-            </tr>
-        </table>
+        </div>
 
-        <footer class="footer">
+    </main>
 
-            <p id="masInfo">Para más información, consulte la página oficial pulsando <a href="https://carthing.spotify.com/" id="link2">aquí</a></p>
+    <footer class="footer">
 
-        </footer>
+        <p id="masInfo">Para más información, consulte la página oficial pulsando <a href="https://carthing.spotify.com/" id="link2">aquí</a></p>
 
-    </div>
+    </footer>
 
 </body>
 </html>
